Finished robofriends with optimization and folders reorganization

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+# Compiled build for static servers
+build/
+
 # Dependency directories
 node_modules/
 jspm_packages/
